TODO fillin and mobile subnav expand/collapse

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
   <div class="inner">
-    <p>A project of <a href="http://imakewebthings.com">I Make Web Things</a>. Photo by <a href="#TODO">Maciej Adwent</a>.</p>
+    <p>A project of <a href="http://imakewebthings.com">I Make Web Things</a>. Photo by <a href="https://github.com/Maciek416" target="_blank">Maciej Adwent</a>.</p>
   </div>
 </footer>
