--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
       <ul>
         <li><a href="{{ site.url }}/" class="nav-about">About</a></li>
         <li><a href="{{ site.url }}/guides/getting-started" class="nav-guides">Guides</a></li>
-        <li><a href="{{ site.url }}/shortcuts" class="nav-shortcuts">Shortcuts</a></li>
+        <li><a href="{{ site.url }}/shortcuts/sticky-elements" class="nav-shortcuts">Shortcuts</a></li>
         <li><a href="{{ site.url }}/api/waypoint" class="nav-api">API</a></li>
       </ul>
     </nav>
