--- a/css/styles.css
+++ b/css/styles.css
@@ -1011,7 +1011,7 @@ header {
 .or {
   color: #999;
   font-size: 12px;
-  margin: 20px 0; }
+  margin: 10px 0; }
   .or:before, .or:after {
     content: '-';
     padding: 0 1px; }
@@ -1027,7 +1027,7 @@ header {
 .about-links {
   list-style: none;
   padding: 0;
-  margin-top: 24px; }
+  margin-top: 0; }
   .about-links > li {
     display: inline-block; }
   .about-links a {
