--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet'>
-    <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
   </head>
 
   <body>
@@ -22,10 +22,10 @@
     </div>
     <ul class="notifications"></ul>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="{{ site.url }}/js/jquery.waypoints.min.js"></script>
-    <script src="{{ site.url }}/js/sticky.min.js"></script>
-    <script src="{{ site.url }}/js/infinite.min.js"></script>
-    <script src="{{ site.url }}/js/inview.min.js"></script>
-    <script src="{{ site.url }}/js/scripts.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.waypoints.min.js"></script>
+    <script src="{{ site.baseurl }}/js/sticky.min.js"></script>
+    <script src="{{ site.baseurl }}/js/infinite.min.js"></script>
+    <script src="{{ site.baseurl }}/js/inview.min.js"></script>
+    <script src="{{ site.baseurl }}/js/scripts.js"></script>
   </body>
 </html>
