--- a/_includes/shortcuts_nav.html
+++ b/_includes/shortcuts_nav.html
@@ -1,5 +1,5 @@
 <ul class="subsection-nav on-{{ page.subsection }}">
-  <li><a href="{{ site.url }}/shortcuts/sticky-elements" class="nav-sticky-elements">Sticky Elements</a></li>
-  <li><a href="{{ site.url }}/shortcuts/infinite-scroll" class="nav-infinite-scroll">Infinite Scroll</a></li>
-  <li><a href="{{ site.url }}/shortcuts/inview" class="nav-inview">Inview</a></li>
+  <li><a href="{{ site.baseurl }}/shortcuts/sticky-elements" class="nav-sticky-elements">Sticky Elements</a></li>
+  <li><a href="{{ site.baseurl }}/shortcuts/infinite-scroll" class="nav-infinite-scroll">Infinite Scroll</a></li>
+  <li><a href="{{ site.baseurl }}/shortcuts/inview" class="nav-inview">Inview</a></li>
 </ul>
