--- a/_includes/api_nav.html
+++ b/_includes/api_nav.html
@@ -22,6 +22,8 @@
     <h3 class="subheading">Class Methods</h3>
     <ul>
       <li><a href="../destroy-all" class="nav-destroy-all">destroyAll</a></li>
+      <li><a href="../disable-all" class="nav-disable-all">disableAll</a></li>
+      <li><a href="../enable-all" class="nav-enable-all">enableAll</a></li>
       <li><a href="../refresh-all" class="nav-refresh-all">refreshAll</a></li>
       <li><a href="../viewport-height" class="nav-viewport-height">viewportHeight</a></li>
       <li><a href="../viewport-width" class="nav-viewport-width">viewportWidth</a></li>
