--- a/_scss/_api.scss
+++ b/_scss/_api.scss
@@ -210,6 +210,12 @@
   }
 }
 
+.enable-disable-all {
+  height:100px;
+  background:#ccc;
+  margin:16px 0;
+}
+
 #overflow-scroll, #overflow-scroll-offset {
   overflow:auto;
   height:300px;
