--- a/_scss/_subsection.scss
+++ b/_scss/_subsection.scss
@@ -1,7 +1,7 @@
 $sections:
   (getting-started, jquery-zepto, adapters, debugging),
   (sticky-elements, infinite-scroll, inview),
-  (context, context-destroy, context-find-by-element, context-option, context-refresh, continuous-option, destroy, destroy-all, disable, enable, enabled-option, first, group, group-option, handler-option, horizontal-option, last, next, offset-option, previous, refresh-all, viewport-height, viewport-width, waypoint);
+  (context, context-destroy, context-find-by-element, context-option, context-refresh, continuous-option, destroy, destroy-all, disable, disable-all, enable, enable-all, enabled-option, first, group, group-option, handler-option, horizontal-option, last, next, offset-option, previous, refresh-all, viewport-height, viewport-width, waypoint);
 
 .subsection-nav {
   margin:0;
