--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ svg:not(:root) {
  * Address margin not present in IE 8/9 and Safari.
  */
 figure {
-  margin: 1em 40px; }
+  margin: 0; }
 
 /**
  * Address differences between Firefox and other browsers.
